# apps

./: README.md
.github/workflows/: blockchain-ci.yml
Blockchain/: .gitignore  pyproject.toml
Blockchain/.github/workflows/: ci.yml
Blockchain/src/: api.py  run.py
Blockchain/src/blockchain/: blockchain_main.py  models.py
Blockchain/src/blockchain/chain_implementations/: __init__.py  blockchain_array.py  interface.py
Blockchain/tests/: test_example.py
Custom apps/Flashcards_app/: main.py  words.db
Custom apps/Messenger app/: README.md  form.py
Custom apps/Salary app/: README.md  log.txt
EnglishDictionary/: README.md  db.sqlite3
EnglishDictionary/EnglishDictionary/: urls.py
EnglishDictionary/Flask ver/: requirements.txt
EnglishDictionary/templates/: base.html
Flashcards_app/: README.md  words.sqbpro  words_base.py
FreeCodeCamp/Arithmetic formatter/: Arithmetic_arranger.py
FreeCodeCamp/Polygon area calculator/: shape_calculator.py
FreeCodeCamp/Port Scanner/: port_scanner.py
FreeCodeCamp/Time calculator/: time_calculator.py
Messenger app/: README.md  client.py  form.ui  server.py
Pong game/: README.md
Salary app/: README.md  log.txt  salary_v.1.0.py
Snake/: README.md  main.py
SpaceRangers/: README.md
Telegram Bot/: README.md  Telegrambot1.0.py  Telegrambot2.0.py  client.py  config.py  vk_parse.py
WUHost Telegram bot/: README.md  Telegrambot2.0.py  client.py  config.py  subscript.py  subscriptions.db
Whacky Telegram bot/: README.md  UrbanDict.py  config.py  main.py
Word of the day/: README.md  parse.py
certs/: README.md
(+226 files in other folders)
